--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   GOLANG_VERSION: "1.24.x"
-  CNPG_IMAGE_NAME: "ghcr.io/${{ github.repository }}"
+  REGISTRY: "ghcr.io"
 
 permissions:
   contents: write
@@ -91,11 +91,11 @@ jobs:
     needs:
       - check-version
     outputs:
-      version: ${{ steps.build-meta.outputs.version }}
+      version: ${{ env.IMAGE_TAG }}
       author_name: ${{ steps.build-meta.outputs.author_name }}
       author_email: ${{ steps.build-meta.outputs.author_email }}
-      digest: ${{ steps.build.outputs.digest }}
       platforms: ${{ env.PLATFORMS }}
+      ubi_img: ${{ fromJSON(steps.bake-push.outputs.metadata)['ubi']['image.name'] }}
     steps:
       -
         name: Checkout
@@ -113,10 +113,9 @@ jobs:
         name: Build meta
         id: build-meta
         run: |
-          images='ghcr.io/cloudnative-pg/cloudnative-pg'
-          images="${images},ghcr.io/cloudnative-pg/cloudnative-pg-testing"
           commit_sha=${{ github.sha }}
           commit_date=$(git log -1 --pretty=format:'%ad' --date short "${commit_sha}")
+          tag="${GITHUB_REF#refs/tags/v}"
 
           # get git user and email
           author_name=$(git show -s --format='%an' "${commit_sha}")
@@ -125,9 +124,11 @@ jobs:
           # use git describe to get the nearest tag and use that to build the version (e.g. 1.4.0-dev24 or 1.4.0)
           commit_version=$(git describe --tags --match 'v*' "${commit_sha}"| sed -e 's/^v//; s/-g[0-9a-f]\+$//; s/-\([0-9]\+\)$/-dev\1/')
           commit_short=$(git rev-parse --short "${commit_sha}")
-          echo "IMAGES=${images}" >> $GITHUB_ENV
+
           echo "DATE=${commit_date}" >> $GITHUB_ENV
-          echo "version=${commit_version}" >> $GITHUB_OUTPUT
+          echo "VERSION=${commit_version}" >> $GITHUB_ENV
+          echo "IMAGE_TAG=${tag}" >> $GITHUB_ENV
+          echo "REPO_OWNER=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_ENV
           echo "COMMIT=${commit_short}" >> $GITHUB_ENV
           echo "author_name=${author_name}" >> $GITHUB_OUTPUT
           echo "author_email=${author_email}" >> $GITHUB_OUTPUT
@@ -156,7 +157,7 @@ jobs:
         env:
           DATE: ${{ env.DATE }}
           COMMIT: ${{ env.COMMIT }}
-          VERSION: ${{ steps.build-meta.outputs.version }}
+          VERSION: ${{ env.VERSION }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
           NFPM_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
@@ -168,29 +169,6 @@ jobs:
         uses: rajatjindal/krew-release-bot@v0.0.47
         with:
           krew_template_file: dist/krew/cnpg.yaml
-      -
-        name: Docker meta
-        id: docker-meta
-        uses: docker/metadata-action@v5
-        env:
-          IS_LATEST: ${{ needs.check-version.outputs.is_latest == 'true' && needs.check-version.outputs.is_stable == 'true' }}
-        with:
-          images: ${{ env.IMAGES }}
-          flavor: |
-            latest=${{ env.IS_LATEST }}
-          tags: |
-            type=semver,pattern={{version}}
-      -
-        name: Docker meta UBI9
-        id: docker-meta-ubi9
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.IMAGES }}
-          flavor: |
-            latest=false
-            suffix=-ubi9
-          tags: |
-            type=semver,pattern={{version}}
       -
         name: Detect platforms
         run: |
@@ -210,31 +188,37 @@ jobs:
         name: Login to ghcr.io
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Build and push
-        uses: docker/build-push-action@v6
+        uses: docker/bake-action@v6
+        id: bake-push
+        env:
+          environment: "production"
+          buildVersion: ${{ env.VERSION }}
+          tag: ${{ env.IMAGE_TAG }}
+          registry: ${{ env.REGISTRY }}/${{ env.REPO_OWNER }}
+          revision: ${{ env.COMMIT }}
+          latest: ${{ needs.check-version.outputs.is_latest == 'true' && needs.check-version.outputs.is_stable == 'true' }}
         with:
-          platforms: ${{ env.PLATFORMS }}
-          context: .
-          file: Dockerfile
+          source: .
           push: true
-          build-args: |
-            VERSION=${{ steps.build-meta.outputs.version }}
-          tags: ${{ steps.docker-meta.outputs.tags }}
+          no-cache: true
+          targets: "default"
       -
-        name: Build and push UBI9
-        uses: docker/build-push-action@v6
-        with:
-          platforms: ${{ env.PLATFORMS }}
-          context: .
-          file: Dockerfile-ubi9
-          push: true
-          build-args: |
-            VERSION=${{ steps.build-meta.outputs.version }}
-          tags: ${{ steps.docker-meta-ubi9.outputs.tags }}
+        name: Install cosign
+        uses: sigstore/cosign-installer@v3
+        # See https://github.blog/security/supply-chain-security/safeguard-container-signing-capability-actions/
+        # and https://github.com/actions/starter-workflows/blob/main/ci/docker-publish.yml for more details on
+        # how to use cosign.
+      - name: Sign images
+        run: |
+          images=$(echo '${{ steps.bake-push.outputs.metadata }}' |
+            jq '.[] | (."image.name" | sub(",.*";"" )) + "@" + ."containerimage.digest"'
+          )
+          cosign sign --yes ${images}
 
   olm-bundle:
     name: Create OLM bundle and catalog
@@ -270,23 +254,20 @@ jobs:
       - name: Login to ghcr.io
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set bundle variables
+        env:
+          UBI_IMG: ${{ needs.release-binaries.outputs.ubi_img }}
         run: |
-          tag="${GITHUB_REF#refs/tags/v}"
-          version="${tag#v}"
-          LOWERCASE_CNPG_IMAGE_NAME=${CNPG_IMAGE_NAME,,}
-          echo "IMAGE_NAME=${LOWERCASE_CNPG_IMAGE_NAME}" >> $GITHUB_ENV
-          echo "CONTROLLER_IMG=${LOWERCASE_CNPG_IMAGE_NAME}:${version}-ubi9" >> $GITHUB_ENV
-          echo "BUNDLE_IMG=${LOWERCASE_CNPG_IMAGE_NAME}:bundle-${version}" >> $GITHUB_ENV
-          echo "CATALOG_IMG=${LOWERCASE_CNPG_IMAGE_NAME}:catalog-${version}" >> $GITHUB_ENV
+          echo "CONTROLLER_IMG=${UBI_IMG}" >> $GITHUB_ENV
+          echo "BUNDLE_IMG=${UBI_IMG}-bundle" >> $GITHUB_ENV
+          echo "CATALOG_IMG=${UBI_IMG}-catalog" >> $GITHUB_ENV
 
       - name: Create bundle
         env:
-          IMAGE_NAME: ${{ env.IMAGE_NAME }}
           CONTROLLER_IMG: ${{ env.CONTROLLER_IMG }}
           BUNDLE_IMG: ${{ env.BUNDLE_IMG }}
           CATALOG_IMG: ${{ env.CATALOG_IMG }}
